--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -84,6 +84,7 @@ body {
 }
 
 .signup-form {
+  color: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -91,10 +92,21 @@ body {
   padding: 0px 50px 0px 50px;
 }
 
+.signup-form input {
+  height: 25px;
+  border-radius: 3px;
+}
+
 .signup-form-div {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+.signup-form-wrapper {
+  padding: 32px;
+  background-color: #FFFFFF;
+  border-radius: 3px;
+  border: 1px solid #3260c7;
 }
 
 .sign-up-button {
