--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -2,7 +2,7 @@
   <% if logged_in? %>
     window.currentUser = <%= render(
       "api/users/user.json.jbuilder",
-      user: @current_user
+      user: current_user
     ).html_safe %>
     <% end %>
 </script>
