--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,8 @@ body {
   margin: auto;
 }
 
+/*"SPLASHPAGE"/HOMEPAGE*/
+
 .nav {
   width: 100%;
   background-color: #4fc5d0;
@@ -35,6 +37,8 @@ body {
   justify-content: space-between;
   padding: 30px 100px 0px 100px;
 }
+
+/*USER LOGIN*/
 
 .login-button {
   cursor: pointer;
@@ -96,6 +100,8 @@ body {
   background-color: #3260c7;
 }
 
+/*SPLASHPAGE MAIN TEXT*/
+
 .homepage {
   background-color: #4fc5d0;
   color: white;
@@ -127,6 +133,8 @@ body {
   font-family: 'GT America',sans-serif;
   font-weight: normal;
 }
+
+/*SIGN-UP FORM*/
 
 .signup-form {
   color: black;
@@ -177,8 +185,20 @@ body {
   padding: 0px;
 }
 
+/* MATCHES PAGE (PET INDEX)*/
+
+.filter-sort-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+/*ALL MATCHES*/
+
 .pet-index {
   text-align: center;
+  min-width: 900px;
+  display: flex;
+  justify-content: center;
 }
 
 .pets-list {
@@ -186,14 +206,36 @@ body {
   display: grid;
   grid-template-columns: 33% 33% 33%;
   padding-left: 0px;
-  min-width: 1000px;
+
 }
 
 .pets-list li {
-  margin: 10px;
+  margin: 40px;
 }
 
-.pet-list img {
+.pet-img {
+  position: relative;
   height: 220px;
+  width: 100%;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+/*INDIVIDUAL MATCHES ON MATCH INDEX*/
+
+.match-wrapper {
+  border-radius: 5px;
+  border: 1px solid #f4f4f4;
   width: 220px;
+  height: 325px
+}
+
+.match-info {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.match-wrapper h3 {
+  margin: 5px;
 }
