--- a/app/assets/stylesheets/components/splash_page.scss
+++ b/app/assets/stylesheets/components/splash_page.scss
@@ -3,12 +3,14 @@ body {
   margin: auto;
 }
 
-.nav {
-  width: 100%;
-  background-color: #4fc5d0;
+.logo {
+  font-family: 'Courgette', cursive;
+  font-size: 50px;
+  margin-top: 0px;
+  margin-bottom: 25px;
 }
 
-.nav-bar {
+.splash-nav-bar {
   background-color: #4fc5d0;
   color: white;
   position: relative;
