Adds more styling to pet show page

--- a/app/assets/stylesheets/components/splash_page.scss
+++ b/app/assets/stylesheets/components/splash_page.scss
@@ -17,6 +17,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 30px 100px 0px 100px;
+  min-width: 800px;
 }
 
 .homepage {
