--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -3,6 +3,7 @@
 .session-button {
   cursor: pointer;
   height: 40px;
+  width: 100px;
   font-size: 16px;
   padding: 0 15px;
   border: 1px solid #ffffff;
