Changes styling of logo link

--- a/app/assets/stylesheets/components/nav.scss
+++ b/app/assets/stylesheets/components/nav.scss
@@ -8,6 +8,18 @@
   min-width: 800px;
 }
 
+.home-link {
+  text-decoration: none;
+  color: white;
+}
+
+.logo {
+  font-family: 'Courgette', cursive;
+  font-size: 50px;
+  margin-top: 0px;
+  margin-bottom: 25px;
+}
+
 .nav-left {
   display: flex;
   justify-content: space-between;
