Renders conversations index page

--- a/app/assets/stylesheets/components/nav.scss
+++ b/app/assets/stylesheets/components/nav.scss
@@ -23,6 +23,17 @@
 .nav-left {
   display: flex;
   justify-content: space-between;
+  div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+.messages-link {
+  text-decoration: none;
+  color: white;
+  padding-right: 15px
 }
 
 .header-user-img {
