--- a/app/assets/stylesheets/components/pet_show.scss
+++ b/app/assets/stylesheets/components/pet_show.scss
@@ -22,6 +22,17 @@
     margin-left: 10px;
     margin-right: 10px;
   }
+  button {
+    cursor: pointer;
+    height: 40px;
+    width: 100px;
+    font-size: 16px;
+    margin: 30px;
+    border: 1px solid #ffffff;
+    border-radius: 3px;
+    color: #ffffff;
+    background-color: transparent;
+  }
 }
 
 .profile-img {
