--- a/app/assets/stylesheets/components/splash_page.scss
+++ b/app/assets/stylesheets/components/splash_page.scss
@@ -3,6 +3,13 @@ body {
   margin: auto;
 }
 
+.splash-container {
+  background-color: #4fc5d0;
+  height: 725px;
+  min-width: 900px;
+  padding: 0 100px 0 100px;
+}
+
 .logo {
   font-family: 'Courgette', cursive;
   font-size: 50px;
@@ -16,7 +23,7 @@ body {
   position: relative;
   display: flex;
   justify-content: space-between;
-  padding: 30px 100px 0px 100px;
+  padding: 30px 75px 0px 75px;
   min-width: 800px;
 }
 
@@ -27,7 +34,8 @@ body {
   position: relative;
   display: flex;
   justify-content: space-between;
-  padding: 0 100px 0 100px;
+  padding: 0 75px 0 75px;
+  min-width: 800px;
 }
 
 .homepage-desc {
