Change nav bar color

--- a/app/assets/stylesheets/components/nav.scss
+++ b/app/assets/stylesheets/components/nav.scss
@@ -1,5 +1,5 @@
 .nav-bar {
-  background-color: #104da1;
+  background-color: ##4fc5d0;
   color: white;
   position: relative;
   display: flex;
@@ -37,7 +37,7 @@
 }
 
 .header-user-img {
-  background-color: #104da1;
+  background-color: ##4fc5d0;
   height: 50px;
   width: 50px;
   border-radius: 50%;
