--- a/app/assets/stylesheets/components/pet_show.scss
+++ b/app/assets/stylesheets/components/pet_show.scss
@@ -1,5 +1,5 @@
 .profile-header {
-  background-color: ##4fc5d0;
+  background-color: #4fc5d0;
   color: white;
   width: 100%;
   min-width: 1000px;
@@ -36,7 +36,7 @@
 }
 
 .profile-img {
-  background-color: ##4fc5d0;
+  background-color: #4fc5d0;
   height: 175px;
   width: 175px;
   border-radius: 50%;
