--- a/app/assets/stylesheets/components/nav.scss
+++ b/app/assets/stylesheets/components/nav.scss
@@ -13,6 +13,10 @@
   color: white;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 .logo {
   font-family: 'Courgette', cursive;
   font-size: 50px;
