Modifies styling for profile image

--- a/app/assets/stylesheets/components/pet_show.scss
+++ b/app/assets/stylesheets/components/pet_show.scss
@@ -42,10 +42,9 @@
   border-radius: 50%;
   overflow: hidden;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   img {
-    width: 100%;
-    position: relative;
+    height: 100%;
   }
 }
 .profile-body-wrapper {
