--- a/app/assets/stylesheets/components/pets.scss
+++ b/app/assets/stylesheets/components/pets.scss
@@ -33,13 +33,13 @@
 }
 
 .pet-img-wrapper {
-  height: 220px;
+  height: 230px;
   overflow: hidden;
-  align-content: center;
+  text-align: center;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
   .pet-img {
     height: 100%;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
   }
 }
 
