Updates default font style

--- a/app/assets/stylesheets/components/splash_page.scss
+++ b/app/assets/stylesheets/components/splash_page.scss
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin: auto;
+}
+
+h3 {
+  font-size: 18px;
 }
 
 .splash-container {
