--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -1,19 +1,23 @@
 
 // session-button class buttons exist on splash page and nav components
-.session-button {
+button {
   cursor: pointer;
   height: 40px;
   width: 100px;
   font-size: 16px;
   padding: 0 15px;
-  border: 1px solid #ffffff;
+  border: 1px solid rgba(50, 96, 199, 1);
   border-radius: 3px;
   color: #ffffff;
-  background-color: transparent;
+  background-color: rgba(50, 96, 199, 1);
 }
 
-.session-button:hover {
-  background-color: rgba(167, 233, 239, 0.1);
+button:hover {
+  background-color: transparent;
+  color: rgba(50, 96, 199, 1);
+  border: 2px solid rgba(50, 96, 199, 1);
+  font-weight: bolder;
+  transition: 0.3s;
 }
 
 .login-form-wrapper {
@@ -92,9 +96,9 @@
   background-color: #3260c7;
 }
 
-button:hover {
-  background-color: rgb(94, 132, 219);
-}
+// button:hover {
+//   background-color: rgb(94, 132, 219);
+// }
 
 .auth-errors {
   font-size: 14px;
