--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,48 @@
  *= require_tree .
  *= require_self
  */
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+body {
+ font-family: 'Open Sans', sans-serif;
+ margin: auto;
+}
+
+h3 {
+ font-size: 18px;
+}
+
+button {
+  cursor: pointer;
+  height: 40px;
+  width: 100px;
+  font-size: 16px;
+  /* padding: 0 15px; */
+  border: 1px solid rgba(50, 96, 199, 1);
+  border-radius: 5px;
+  color: #ffffff;
+  background-color: rgba(50, 96, 199, 1);
+}
+
+button:hover {
+  background-color: transparent;
+  color: rgba(50, 96, 199, 1);
+  border: 2px solid rgba(50, 96, 199, 1);
+  font-weight: bolder;
+  transition: 0.3s;
+}
+
+.light-blue-btn {
+  color: white;
+  border: 1px solid white;
+  background-color: rgba(79, 197, 208, 1);
+  margin: 5px;
+}
+
+.light-blue-btn:hover {
+  color: rgba(10, 124, 169, 1);
+  border: 2px solid rgba(10, 124, 169, 1);
+  background-color: white;
+  transition: 0.5s;
+}
