--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -1,24 +1,5 @@
 
 // session-button class buttons exist on splash page and nav components
-button {
-  cursor: pointer;
-  height: 40px;
-  width: 100px;
-  font-size: 16px;
-  padding: 0 15px;
-  border: 1px solid rgba(50, 96, 199, 1);
-  border-radius: 3px;
-  color: #ffffff;
-  background-color: rgba(50, 96, 199, 1);
-}
-
-button:hover {
-  background-color: transparent;
-  color: rgba(50, 96, 199, 1);
-  border: 2px solid rgba(50, 96, 199, 1);
-  font-weight: bolder;
-  transition: 0.3s;
-}
 
 .login-form-wrapper {
   text-align: center;
@@ -32,45 +13,46 @@ button:hover {
   border-radius: 3px;
 }
 
-.login-form {
+.login-form, .signup-form {
   color: black;
   font-size: 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  align-items: center;
   padding: 0px 50px 0px 50px;
 }
 
-.login-form input {
+.login-form input, .signup-form input {
   height: 25px;
   border-radius: 3px;
 }
 
-.login-form-button {
-  cursor: pointer;
-  height: 40px;
-  font-size: 16px;
-  padding: 0 15px;
-  border: 1px solid #3260c7;
-  border-radius: 3px;
-  color: #ffffff;
-  background-color: #3260c7;
-}
+// .login-form-button {
+//   cursor: pointer;
+//   height: 40px;
+//   font-size: 16px;
+//   padding: 0 15px;
+//   border: 1px solid #3260c7;
+//   border-radius: 3px;
+//   color: #ffffff;
+//   background-color: #3260c7;
+// }
 
-.signup-form {
-  color: black;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  padding: 0px 50px 0px 50px;
-}
+// .signup-form {
+//   color: black;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-content: center;
+//   padding: 0px 50px 0px 50px;
+// }
 
-.signup-form input {
-  height: 25px;
-  border-radius: 3px;
-}
+// .signup-form input {
+//   height: 25px;
+//   border-radius: 3px;
+// }
 
 .signup-form-div {
   display: flex;
@@ -84,21 +66,6 @@ button:hover {
   border-radius: 3px;
   border: 1px solid #3260c7;
 }
-
-.sign-up-button {
-  cursor: pointer;
-  height: 40px;
-  font-size: 16px;
-  padding: 0 15px;
-  border: 1px solid #3260c7;
-  border-radius: 3px;
-  color: #ffffff;
-  background-color: #3260c7;
-}
-
-// button:hover {
-//   background-color: rgb(94, 132, 219);
-// }
 
 .auth-errors {
   font-size: 14px;
